src/cli/snapshots/t3claw__cli__tests__long_help_output_without_import.snap
---
source: src/cli/mod.rs
expression: help
---
T3Claw is a secure AI assistant.

Getting started:
  t3claw onboard              # Interactive setup wizard (recommended for first run)
  t3claw onboard --quick      # Quick setup: just pick a provider and model
  t3claw models set-provider openai  # Switch to a specific provider
  t3claw doctor               # Check your configuration

Common commands:
  t3claw run                  # Start the agent
  t3claw config list          # View all settings
  t3claw models status        # Show current provider and model
  t3claw models list          # List available providers

Use 't3claw <subcommand> --help' for details on any command.

Usage: t3claw [OPTIONS] [COMMAND]

Commands:
  run         Run the AI agent
  onboard     Run interactive setup wizard (start here if new to T3Claw)
  config      Manage app configuration settings
  tool        Manage WASM tools
  registry    Browse/install extensions
  channels    Manage channels
  routines    Manage routines
  mcp         Manage MCP servers
  memory      Manage workspace memory
  pairing     Manage DM pairing
  profile     Manage deployment profiles
  service     Manage OS service
  skills      Manage skills
  hooks       Manage lifecycle hooks
  models      Manage LLM providers and models
  doctor      Run diagnostics (check if everything is configured correctly)
  logs        View and manage gateway logs
  status      Show system status
  completion  Generate completions
  login       Authenticate with a provider (re-login)
  acp         Manage ACP agents
  help        Print this message or the help of the given subcommand(s)

Options:
      --cli-only
          Run in interactive CLI mode only (disable other channels)

      --no-db
          Skip database connection (for testing)

  -m, --message <MESSAGE>
          Single message mode - send one message and exit

  -c, --config <CONFIG>
          Configuration file path (optional, uses env vars by default)

      --no-onboard
          Skip first-run onboarding check

      --auto-approve
          Auto-approve tool execution (shell, file writes, HTTP, etc.)
          
          Skips interactive approval prompts for standard tools. Destructive operations still require explicit approval. Other safeguards remain active: rate limits, hooks, authentication gates.

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
